--- a/css/okboomer.css
+++ b/css/okboomer.css
@@ -1,4 +1,4 @@
 body {
-    background-image: url(https://markgines.com/images/chicago.jpg");
+    background-image: url("https://markgines.com/images/chicago.jpg");
     background-size: 100%;
 }
