--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,6 +1,6 @@
 .pageHeader {
-  background-image: url("../img/bg.jpg");
-  height: 100%;
+  background-image: url("../img/b21g.jpg");
+  height: 200%;
   background-position: center;
   margin: auto;
   display: block;
